--- a/css/landscape.css
+++ b/css/landscape.css
@@ -1,7 +1,3 @@
-body html {
-  width: 100%;
-  height: 100%;
-}
 h1{
   font-size: 2em;
 }
@@ -9,14 +5,12 @@ h1{
   position: fixed;
   width: 100%;
   height: 100%;
-  /* background-color: red; */
 }
 .navi-wrap{
   /* kontrola */
   /* box-sizing: border-box;
   border: 3px solid green; */
   /************************/
-  top: 0;
   height: 5%;
   width: 100%;
   z-index: 10;
@@ -24,32 +18,26 @@ h1{
 .scrolling-wrapper{
   /* kontrola */
   /* box-sizing: border-box;
-  border: 3px solid green; */
+  border: 6px solid green; */
   /************************/
-  top: 5%;
-  z-index: -1;
+  z-index: -5;
   height: 95%;
   width: 100%;
   scroll-behavior: smooth;
   overflow-y: scroll;
   text-align: center;
+  background-size: cover;
+  background-image: url("pic/blueskymin.png");
 }
 .nav {
   /* kontrola */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* border-bottom: 1px solid black; */
   /************************/
   box-shadow: 0 2px 1px 2px rgba(0,0,0, 0.5);
-  /* box-shadow: 0 10px black inset,0 -10px red inset, -10px 0 blue inset, 10px 0 green inset; */
-  /* box-shadow: 0px 3px 5px black; */
-  /* box-shadow:0px 0px 20px rgba(	0,0,0, 0.8); */
   position: relative;
   width: 100%;
   height: 100%;
-  /* background-image: url("pic/nekonecny.png"); */
-  background-repeat: repeat-x;
-  /* background-attachment: fixed; */
-  background-size: contain;
   color: black;
   user-select: none;
   display: block;
@@ -104,12 +92,12 @@ h1{
   /* border-bottom: 3px solid black; */
   /* border-left: 3px solid black; */
   /************************/
-  width: 100%
+  width: 100%;
   position: relative;
   margin: auto;
   display: block;
   vertical-align: middle;
-  font-size: 1.3em;
+  font-size: 1.5em;
   color: inherit;
 }
 .nav ul li a:hover {
@@ -117,34 +105,21 @@ h1{
   text-shadow: 2px 2px 4px #000000;
   box-sizing: border-box;
 }
-/* #home:hover, #news:hover, #contact:hover, #partners:hover{ */
-  /* box-shadow:0px 0px 30px rgba(	0,0,0, 0.8); */
-  /* background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.7)); */
-/* } */
-/* #home::after, #news::after, #partners::after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-} */
-#bvideo {
+/* #bvideo {
   position: fixed;
   width: 100%;
   height: 100%;
-  /* top: 5%; */
+  top: 5%;
   bottom: 0;
   right: 0;
   z-index: -5;
-}
+} */
 #w1{
   /* kontrola */
   box-sizing: border-box;
-  /* border: 3px solid black; */
+  border: 3px solid black;
   /************************/
-  z-index: -1;
+  z-index: 1;
   position: relative;
   width: 100%;
   height: 100%;
@@ -156,38 +131,38 @@ h1{
   box-sizing: border-box;
   border: 3px solid black;
   /************************/
-  z-index: -1;
+  z-index: 1;
   position: relative;
   width: 100%;
   height: 100%;
   color: black;
-  background: rgba(250,250,250, 0.3);
+  /* background: rgba(250,250,250, 0.3); */
 }
 #w3{
   /* kontrola */
   box-sizing: border-box;
   border: 3px solid black;
   /************************/
-  z-index: -1;
+  z-index: 1;
   position: relative;
   width: 100%;
   height: 100%;
   color: black;
-  background: rgba(250,250,250, 0.3);
+  /* background: rgba(250,250,250, 0.3); */
 }
 #w4{
   /* kontrola */
   box-sizing: border-box;
   border: 3px solid black;
   /************************/
-  z-index: -1;
+  z-index: 1;
   position: relative;
   width: 100%;
   height: 100%;
   background-repeat: repeat-x;
   background-attachment: fixed;
   color: black;
-  background: rgba(250,250,250, 0.3);
+  /* background: rgba(250,250,250, 0.3); */
 }
 #home {
   position: absolute;
@@ -248,7 +223,7 @@ h1{
   height: auto;
   display: block;
   margin-top: 2%;
-  box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
+  box-shadow:0px 0px 10px rgba(	0,0,0, 0.8);
   background: radial-gradient(circle, rgba(100,149,237, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgba(100,149,237, 0.6));
   /* background: radial-gradient(circle, rgb(255,165,0, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgb(255,165,0, 0.6)); */
 
@@ -275,8 +250,6 @@ h1{
   text-align: center;
   position: absolute;
   width: auto;
-  padding-left: auto;
-  padding-right: auto;
   margin-top: 1%;
 }
 #partners {
@@ -313,15 +286,10 @@ h1{
   height: auto;
 }
 
-
-
-
-
-
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 12px;
-}
-::-webkit-scrollbar-track {
+} */
+/* ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
     border-radius: 10px;
     background-color: rgba(250,250,250,1);
@@ -330,4 +298,4 @@ h1{
     border-radius: 10px;
     background-color: rgba(0,0,0,0.6);
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
+} */
