--- a/css/large.css
+++ b/css/large.css
@@ -1,7 +1,3 @@
-body html {
-  width: 100%;
-  height: 100%;
-}
 h1{
   font-size: 2em;
 }
@@ -9,57 +5,40 @@ h1{
   position: fixed;
   width: 100%;
   height: 100%;
-  /* background-color: red; */
 }
 .navi-wrap{
-  /* kontrola */
-  /* box-sizing: border-box;
-  border: 3px solid green; */
-  /************************/
-  top: 0;
   height: 5%;
   width: 100%;
   z-index: 10;
 }
 .scrolling-wrapper{
+  perspective: 1px;
+  transform-style: preserve-3d;
   /* kontrola */
-  /* box-sizing: border-box;
-  border: 3px solid green; */
+  box-sizing: border-box;
+  border: 6px solid green;
   /************************/
-  top: 5%;
-  z-index: -1;
+  z-index: -5;
   height: 95%;
   width: 100%;
   scroll-behavior: smooth;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   text-align: center;
+  background-color: gray;
 }
 .nav {
-  /* kontrola */
-  box-sizing: border-box;
-  /* border-bottom: 1px solid black; */
-  /************************/
-  box-shadow: 0 2px 1px 2px rgba(0,0,0, 0.5);
-  /* box-shadow: 0 10px black inset,0 -10px red inset, -10px 0 blue inset, 10px 0 green inset; */
-  /* box-shadow: 0px 3px 5px black; */
-  /* box-shadow:0px 0px 20px rgba(	0,0,0, 0.8); */
+  z-index: 99999;
+  box-shadow: 0 2px 1px 2px rgba(0,0,0, 1);
   position: relative;
   width: 100%;
   height: 100%;
-  /* background-image: url("pic/nekonecny.png"); */
-  background-repeat: repeat-x;
-  /* background-attachment: fixed; */
-  background-size: contain;
   color: black;
   user-select: none;
   display: block;
   background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1));
 }
 .nav ul {
-  /* kontrola */
-  /* box-sizing: border-box;
-  border: 3px solid snow;  */
-  /************************/
   position: absolute;
   height: 100%;
   list-style: none;
@@ -79,7 +58,6 @@ h1{
   /* kontrola */
   box-sizing: border-box;
   border-left: 2px solid black;
-  /* border: 2px solid black; */
   /************************/
   position: relative;
   padding-left: 1%;
@@ -99,17 +77,13 @@ h1{
   border-left: none;
 }
 .nav ul li a {
-  /* kontrola */
   box-sizing: border-box;
-  /* border-bottom: 3px solid black; */
-  /* border-left: 3px solid black; */
-  /************************/
-  width: 100%
+  width: 100%;
   position: relative;
   margin: auto;
   display: block;
   vertical-align: middle;
-  font-size: 2em;
+  font-size: 1.5em;
   color: inherit;
 }
 .nav ul li a:hover {
@@ -117,90 +91,107 @@ h1{
   text-shadow: 2px 2px 4px #000000;
   box-sizing: border-box;
 }
-/* #home:hover, #news:hover, #contact:hover, #partners:hover{ */
-  /* box-shadow:0px 0px 30px rgba(	0,0,0, 0.8); */
-  /* background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.7)); */
-/* } */
-/* #home::after, #news::after, #partners::after {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-} */
-#bvideo {
+/* #bvideo {
   position: fixed;
   width: 100%;
   height: 100%;
-  /* top: 5%; */
+  top: 5%;
   bottom: 0;
   right: 0;
   z-index: -5;
+} */
+.separator{
+    padding-top: 2%;
+    left: 0;
+    right: 0;
+    position: relative;
+    transform-style: inherit;
+    background-image: url("https://images.pexels.com/photos/370799/pexels-photo-370799.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;
+    display: block;
+    /* border: 3px solid black; */
+    width: 100%;
+    min-height: 80%;
+    transform: translateZ(-1px) scale(100% , 50%);
+    box-sizing: border-box;
+    z-index: -3;
+}
+.slide{
+  transform-style: inherit;
+  z-index: 2;
+  position: relative;
+  background-size: cover;
+  /* background-image: url("../css/pic/green.jpg"); */
+  /* background-color: snow; */
+  /* background-image: url("../videos/gif_sky.gif"); */
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.7);
+  data-background-image: url("https://pikdone.s3.amazonaws.com/2018/04/Ai-Modern-technological-background-vector-free-download.jpg");
 }
 #w1{
   /* kontrola */
   box-sizing: border-box;
-  /* border: 3px solid black; */
+  border: none;
+  background-image: url("../css/pic/green.jpg");
   /************************/
-  z-index: -1;
-  position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   color: black;
-  /* background: rgba(250,250,250, 0.1); */
 }
 #w2{
   /* kontrola */
+  padding-top: 2%;
   box-sizing: border-box;
-  border: 3px solid black;
+  border: 1px solid red;
   /************************/
-  z-index: -1;
-  position: relative;
   width: 100%;
-  height: 100%;
+  /* zaberie minimalne vysku obrazovky, avsak moze byt vacsi v zavislosti od jeho obsahu */
+  height: auto;
+  min-height: 100%;
   color: black;
-  background: rgba(250,250,250, 0.3);
+  margin-left: auto;
+  margin-right: auto;
+  /* background: rgba(250,250,250, 1); */
+  padding-bottom: 1%;
+}
+#w2 h2{
+  display:block;
+  height: 20%;
+  width: 100%;
+  background-color: orange;
 }
 #w3{
   /* kontrola */
   box-sizing: border-box;
-  border: 3px solid black;
+  /* border: 3px solid black; */
   /************************/
-  z-index: -1;
-  position: relative;
+  /* position: relative; */
+  /* background-color: blue; */
   width: 100%;
   height: 100%;
   color: black;
-  background: rgba(250,250,250, 0.3);
 }
 #w4{
   /* kontrola */
   box-sizing: border-box;
-  border: 3px solid black;
+  /* border: 3px solid black; */
   /************************/
-  z-index: -1;
-  position: relative;
+  /* position: relative; */
   width: 100%;
   height: 100%;
-  background-repeat: repeat-x;
-  background-attachment: fixed;
   color: black;
-  background: rgba(250,250,250, 0.3);
+  /* background-color: red; */
 }
 #home {
   position: absolute;
-  width: 80%;
-  height: 50%;
+  width: 60%;
+  height: 40%;
   border-radius: 90px;
-  box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
-  background-image: url("pic/carbon_white.jpg");
-  background-repeat: repeat-x;
-  background-attachment: fixed;
-  /* background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8)); */
-  transition: box-shadow 0.3s linear, background-color 1s linear;
+  box-shadow:0px 0px 20px rgba(	0,0,0, 0.9);
+  /* background-image: url("pic/carbon_white.jpg"); */
+  /* transition: box-shadow 0.3s linear, background-color 1s linear; */
   user-select: none;
+  box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
+  background-color: rgba(250, 250, 250, 0.4);
   top: 0;
   bottom: 0;
   left: 0;
@@ -208,7 +199,7 @@ h1{
   margin: auto;
   text-align: center;
   overflow: hidden;
-  z-index: 2;
+  /* z-index: 2; */
 }
 #popis {
   position: absolute;
@@ -221,11 +212,8 @@ h1{
   height: 90%;
   border-radius: 100px;
   margin: auto;
-  box-shadow:0px 0px 5px 5px rgba(	0,0,0, 0.8) inset;
-   /* rgba(140,140,140, 0.8), */
-   /* rgba(0,0,205) */
-  background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1));
-  /* background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1)); */
+  box-shadow:0px 0px 5px 5px rgba(	0,0,0, 0.9) inset;
+  background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1));
   overflow: hidden;
 }
 #popis ul {
@@ -248,41 +236,36 @@ h1{
   height: auto;
   display: block;
   margin-top: 2%;
-  box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
-  background: radial-gradient(circle, rgba(100,149,237, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgba(100,149,237, 0.6));
-  /* background: radial-gradient(circle, rgb(255,165,0, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgb(255,165,0, 0.6)); */
-
-}
+  box-shadow:0px 0px 10px rgba(	0,0,0, 0.8);
+  background: radial-gradient(circle, rgba(100,149,237, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgba(100,149,237, 0.6));}
 #popis ul li:first-child{
   margin-top: 0;
 }
-#gallery {
-  padding: 40px 10px 40px 10px;
-  scroll-behavior: inherit;
-  text-align: center;
-  transition: box-shadow 0.3s linear, background-color 1s linear;
-  user-select: none;
+.galery-grid{
+  margin-top: 2%;
+  display: grid;
+  justify-content: center;
   width: auto;
-  user-select: none;
-  position: absolute;
-  left: 0;
-  right: 0;
+  grid-gap: 10px 1%;
+  grid-template-columns: 10% 10% 10% 10%;
+  grid-template-rows: auto, auto;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;}
+.grid-item{
+  box-sizing: content-box;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: solid 1px black;
+  box-shadow: 0px 0px 1px 2px rgba(0,0,0,1);
 }
-#gallery-wrapper{
-  display: inline-block;
-  text-align: center;
-  position: absolute;
-  width: auto;
-  padding-left: auto;
-  padding-right: auto;
-  margin-top: 1%;
+.grid-item img{
+  display: block;
+    height: 100%;
+    width: 100%;
 }
 #partners {
   box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
-  transition: box-shadow 0.3s linear, background-color 1s linear;
-  background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8));
+  /* transition: box-shadow 0.3s linear, background-color 1s linear; */
+  /* background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8)); */
   width: 80%;
   border-radius: 22px;
   scroll-behavior: smooth;
@@ -295,15 +278,14 @@ h1{
   margin-right: auto;
   height: 93%;
   margin-top: 1%;
-  /* overflow-y: scroll; */
 }
 #contact{
-  position: absolute;
+  /* position: absolute; */
   padding: 10px 10px 40px 10px;
   scroll-behavior: inherit;
   text-align: center;
   background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8));
-  transition: box-shadow 0.3s linear, background-color 1s linear;
+  /* transition: box-shadow 0.3s linear, background-color 1s linear; */
   user-select: none;
   left: 0;
   right: 0;
@@ -313,12 +295,7 @@ h1{
   height: auto;
 }
 
-
-
-
-
-
-::-webkit-scrollbar {
+ ::-webkit-scrollbar {
     width: 12px;
 }
 ::-webkit-scrollbar-track {
