--- a/css/phone.css
+++ b/css/phone.css
@@ -1,242 +1,239 @@
-body {
+h1{
+  font-size: 1em;
+}
+.all-wrapper{
+  position: fixed;
   width: 100%;
   height: 100%;
-  padding-top: 0;
 }
-/* ---------------------------------------- viewport */
-.all-wrapper{
-  position: relative;
-  height: 100px;
-  margin-top: 0px;
-  /* width: 100px; */
-  /* top: 0; */
-  /* left: 0; */
-  background-color: black;
-  /* z-index: 99; */
-  /* margin-top: 0;
-  margin-left: 0; */
-  /* display: block; */
-}
-/* ---------------------------------------- content */
-.scrolling-wrapper{
-  /* position: static;
-  margin-top: 10%;
-  background-color: orange;
-  height: 90%;
-  scroll-behavior: smooth;
-  text-align: center;
-  top: 0;
-  overflow-y: scroll;
+.navi-wrap{
+  /* kontrola */
+  /* box-sizing: border-box;
+  border: 3px solid green; */
+  /************************/
+  height: 5%;
   width: 100%;
-  z-index: -1; */
+  z-index: 10;
 }
-/* ---------------------------------------- navigacia */
-#navi-wrap{
-  background-color: red;
+.scrolling-wrapper{
+  /* kontrola */
+  /* box-sizing: border-box;
+  border: 6px solid green; */
+  /************************/
+  z-index: -5;
+  height: 95%;
+  width: 100%;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  text-align: center;
+  background-size: cover;
+  background-image: url("pic/blueskymin.png");
+  -webkit-overflow-scrolling: touch;
 }
 .nav {
+  /* kontrola */
+  /* box-sizing: border-box; */
+  /* border-bottom: 1px solid black; */
+  /************************/
+  box-shadow: 0 2px 1px 2px rgba(0,0,0, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: black;
+  user-select: none;
+  display: block;
+  background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1));
 }
 .nav ul {
-  list-style-type: none;
+  /* kontrola */
+  /* box-sizing: border-box;
+  border: 3px solid snow;  */
+  /************************/
+  position: absolute;
+  height: 100%;
+  list-style: none;
+  text-align:center;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 80%;
+  height: 100%;
+  text-align: center;
+  display: inline-flex;
+  justify-content: center;
 }
 .nav ul li {
-  height: 100%;
-  width: 100%;
+  /* kontrola */
+  box-sizing: border-box;
+  border-left: 2px solid black;
+  /* border: 2px solid black; */
+  /************************/
+  position: relative;
+  padding-left: 1%;
+  padding-right: 1%;
+  height: auto;
+  width: auto;
   margin-top: auto;
   margin-bottom: auto;
-  position: relative;
+  display: flex;
   vertical-align: middle;
   color: inherit;
   text-shadow: 1px 1px 3px snow;
   transition: text-shadow 0.3s;
-  text-align: center;
-  background-color: snow;
-  box-sizing: border-box;
-  border-left: solid 1px black;
-}
-.nav ul li a {
-  top: 0;
-  bottom: 0;
-  margin-bottom: auto;
-  box-shadow: inherit;
-  text-shadow: inherit;
-  text-decoration: none;
-  display: block;
-  font-size: 1em;
-  color: inherit;
-  position: absolute;
-  width: auto;
-  /* height: 100%; */
 }
 .nav ul li:nth-child(1){
-  margin-left: 0px;
+  margin-left: 0;
   border-left: none;
 }
-#nav-home{
-  background-repeat: no-repeat;
-  background-attachment: local;
-  background-position: center;
-  background-size: auto;
-  background-image: url("icons/menu.png");
-  height: 100%;
+.nav ul li a {
+  /* kontrola */
+  box-sizing: border-box;
+  /* border-bottom: 3px solid black; */
+  /* border-left: 3px solid black; */
+  /************************/
   width: 100%;
+  position: relative;
+  margin: auto;
   display: block;
-  overflow: hidden;
+  vertical-align: middle;
+  font-size: 1em;
+  color: inherit;
 }
-#nav-home span{
-  display: none;
+.nav ul li a:hover {
+  color: rgba(50, 50, 210, 1);
+  text-shadow: 2px 2px 4px #000000;
+  box-sizing: border-box;
 }
-#nav-gallery{
-  /* background-image: url("pic/carbon_white.jpg"); */
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto;
-  background-image: url("icons/galerry.png");
-  background-size: auto;
-  height: 100%;
-  width: 100%;
-  display: block;
-}
-#nav-gallery span{
-  display: none;
-}
-#nav-partners{
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto;
-  background-image: url("icons/partners.png");
-  background-size: auto;
-  height: 100%;
-  width: 100%;
-  display: block;
-}
-#nav-partners span{
-  display: none;
-}
-#nav-contact{
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto;
-  background-image: url("icons/contact.png");
-  background-size: auto;
-  height: 100%;
-  width: 100%;
-  display: block;
-}
-#nav-contact span{
-  display: none;
-}
-
-
-#b_video {
-  top:0;
-  margin-top: 10%;
+/* #bvideo {
   position: fixed;
-  min-width: 100%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
+  top: 5%;
   bottom: 0;
   right: 0;
-}
-.gal {
-  z-index: 999;
-  display: inline-block;
-  position: relative;
-  /* margin: 5px; */
-  width: 300px;
-  height: auto;
-  padding-bottom: 0px;
-}
-
-.gal img{
-  z-index: -4;
-  display: block;
-  position: relative;
-  width: 100%;
-  height: auto;
-  margin-bottom: 0;
-}
-
-.gal:hover{
-  outline: 4px solid gold;
-}
-h1{
-  font-size: 1em;
-}
-#w_1{
-  margin-top: 0;
+  z-index: -5;
+} */
+#w1{
+  /* kontrola */
   box-sizing: border-box;
+  border: 3px solid black;
+  /************************/
+  z-index: 1;
   position: relative;
-  outline: 1px solid red;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0, 0);
+  color: black;
+  /* background: rgba(250,250,250, 0.1); */
+}
+#w2{
+  /* kontrola */
+  box-sizing: border-box;
+  border: 3px solid black;
+  /************************/
+  z-index: 1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: black;
+  /* background: rgba(250,250,250, 0.3); */
+}
+#w3{
+  /* kontrola */
+  box-sizing: border-box;
+  border: 3px solid black;
+  /************************/
+  z-index: 1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: black;
+  /* background: rgba(250,250,250, 0.3); */
+}
+#w4{
+  /* kontrola */
+  box-sizing: border-box;
+  border: 3px solid black;
+  /************************/
+  z-index: 1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+  color: black;
+  /* background: rgba(250,250,250, 0.3); */
 }
 #home {
-  /* margin-top: 10% */
+  position: absolute;
+  width: 80%;
+  height: 50%;
+  border-radius: 90px;
   box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
-  scroll-behavior: inherit;
-  width: 90%;
-  height: 40%;
-  background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8));
+  background-image: url("pic/carbon_white.png");
+  background-repeat: repeat-x;
+  background-size: cover;
   transition: box-shadow 0.3s linear, background-color 1s linear;
   user-select: none;
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  margin-top: 5%;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   text-align: center;
+  overflow: hidden;
+  z-index: 2;
 }
 #popis {
-  display: block;
+  position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   top:0;
-  width: 98%;
-  height: 98%;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-  margin-top: auto;
+  width: 100%;
+  height: 90%;
+  border-radius: 100px;
+  margin: auto;
   box-shadow:0px 0px 5px 5px rgba(	0,0,0, 0.8) inset;
-  background: radial-gradient(circle, rgba(255, 208, 0, 0.1), rgba(255,250,250, 0.1), rgba(255,250,250, 0.2), rgba(0,0,0, 0.3));
+   /* rgba(140,140,140, 0.8), */
+   /* rgba(0,0,205) */
+  background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1));
+  /* background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1)); */
+  overflow: hidden;
 }
 #popis ul {
-  display: list-item;
   position: absolute;
   text-align: center;
-  font-size: 1.5em;
-  margin-top: auto;
-  margin-bottom: auto;
+  font-size: 1em;
+  margin: auto;
   top: 0;
   bottom: 0;
-  /* outline: 1px solid red; */
-  height: 80%;
+  right: 0;
+  left: 0;
+  height: 100%;
   width: 100%;
-  /* background-color: snow; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 #popis ul li{
+  width: auto;
+  height: auto;
   display: block;
-  text-align: center;
+  margin-top: 2%;
+  box-shadow:0px 0px 10px rgba(	0,0,0, 0.8);
+  background: radial-gradient(circle, rgba(100,149,237, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgba(100,149,237, 0.6));
+  /* background: radial-gradient(circle, rgb(255,165,0, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgb(255,165,0, 0.6)); */
+
 }
-#w_2{
-  box-sizing: border-box;
-  position: relative;
-  outline: 1px solid red;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(250,250,250, 0.3);
-  /* overflow-y: scroll; */
+#popis ul li:first-child{
+  margin-top: 0;
 }
 #gallery {
-  outline: 1px solid black;
+  padding: 40px 10px 40px 10px;
+  scroll-behavior: inherit;
   text-align: center;
   transition: box-shadow 0.3s linear, background-color 1s linear;
   user-select: none;
@@ -247,32 +244,20 @@ h1{
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  height: 100%;
 }
 #gallery-wrapper{
   display: inline-block;
   text-align: center;
   position: absolute;
   width: auto;
-  padding-left: auto;
-  padding-right: auto;
   margin-top: 1%;
-}
-#w_3{
-  box-sizing: border-box;
-  position: relative;
-  outline: 1px solid black;
-  width: 100%;
-  height: 100%;
-  background: rgba(250,250,250, 0.3);
-  display: flex;
-  overflow-y: auto;
 }
 #partners {
   box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
   transition: box-shadow 0.3s linear, background-color 1s linear;
   background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8));
   width: 80%;
+  border-radius: 22px;
   scroll-behavior: smooth;
   text-align: center;
   user-select: none;
@@ -281,34 +266,30 @@ h1{
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  height: 100%;
-  overflow-y: visible;
-}
-#w_4{
-  box-sizing: border-box;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: snow;
+  height: 93%;
+  margin-top: 1%;
+  /* overflow-y: scroll; */
 }
 #contact{
   position: absolute;
-  scroll-behavior: auto;
+  padding: 10px 10px 40px 10px;
+  scroll-behavior: inherit;
+  text-align: center;
+  background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8));
   transition: box-shadow 0.3s linear, background-color 1s linear;
   user-select: none;
+  left: 0;
   right: 0;
-  bottom: 0;
-  width: 100%;
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
-  /* background-color: red; */
-  display: block;
-  height: 100%;
+  height: auto;
 }
-::-webkit-scrollbar {
+
+/* ::-webkit-scrollbar {
     width: 12px;
-}
-::-webkit-scrollbar-track {
+} */
+/* ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
     border-radius: 10px;
     background-color: rgba(250,250,250,1);
@@ -317,4 +298,4 @@ h1{
     border-radius: 10px;
     background-color: rgba(0,0,0,0.6);
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
-}
+} */
