--- a/css/reset.css
+++ b/css/reset.css
@@ -24,11 +24,9 @@ time, mark, audio, video {
 	font: inherit;
 	/* vertical-align: baseline; */
 }
-html{
-	height: 100%;
-}
 body{
 	height: 100%;
+	width: 100%;
 }
 h1 {
   margin: 0;
